--- a/app/src/main/res/layout/fragment_all_locations.xml
+++ b/app/src/main/res/layout/fragment_all_locations.xml
@@ -1,7 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/allLocations_empty_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        tools:visibility="gone"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/allLocations_addLocations_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:text="Вы ещё не выбрали ни одного города.\nПожалуйста, добавьте город, нажав на кнопку внизу." />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/allLocations_addLocations_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginTop="40dp"
+            android:background="@color/black"
+            android:text="Добавить локацию"
+            android:textColor="@color/white" />
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/allLocations_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        tools:visibility="visible"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        tools:listitem="@layout/item_location"
+        tools:itemCount="4"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </LinearLayout>
