--- a/app/src/main/res/layout/fragment_favorite_locations.xml
+++ b/app/src/main/res/layout/fragment_favorite_locations.xml
@@ -1,7 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/favLocations_empty_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="200dp"
+        android:textColor="@color/black"
+        android:textSize="32sp"
+        android:text="Нет ни одной избранной локации :(" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favoriteLocations_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </LinearLayout>
