init wizard and db

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -2,13 +2,17 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_navigation.xml"
-    app:startDestination="@id/locationsFragment">
+    app:startDestination="@id/destination_locatiaons">
     <fragment
-        android:id="@+id/forecastFragment"
+        android:id="@+id/destination_forecast"
         android:name="ru.yellowshark.dsr_weather.ui.locations.forecast.ForecastFragment"
         android:label="ForecastFragment" />
     <fragment
-        android:id="@+id/locationsFragment"
+        android:id="@+id/destination_locatiaons"
         android:name="ru.yellowshark.dsr_weather.ui.locations.LocationsFragment"
         android:label="LocationsFragment" />
+    <fragment
+        android:id="@+id/destination_add_location"
+        android:name="ru.yellowshark.dsr_weather.ui.locations.add.AddLocationFragment"
+        android:label="AddLocationFragment" />
 </navigation>
