--- a/app/src/main/res/layout/fragment_all_locations.xml
+++ b/app/src/main/res/layout/fragment_all_locations.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical"
         android:gravity="center"
         tools:visibility="gone"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/allLocations_addLocations_text"
@@ -43,7 +43,7 @@
         android:id="@+id/allLocations_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         tools:visibility="visible"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
