--- a/app/src/main/res/layout/fragment_all_locations.xml
+++ b/app/src/main/res/layout/fragment_all_locations.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/allLocations_empty_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center"
-        tools:visibility="gone"
-        android:visibility="visible">
+        android:orientation="vertical"
+        android:visibility="visible"
+        tools:visibility="gone">
 
         <TextView
             android:id="@+id/allLocations_addLocations_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
+            android:gravity="center"
+            android:text="Вы ещё не выбрали ни одного города.\nПожалуйста, добавьте город, нажав на кнопку внизу."
             android:textColor="@color/black"
-            android:textSize="18sp"
-            android:text="Вы ещё не выбрали ни одного города.\nПожалуйста, добавьте город, нажав на кнопку внизу." />
+            android:textSize="18sp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/allLocations_addLocations_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
             android:layout_marginTop="40dp"
+            android:layout_marginEnd="40dp"
             android:background="@color/black"
             android:text="Добавить локацию"
             android:textColor="@color/white" />
@@ -45,12 +45,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        tools:listitem="@layout/item_location"
-        tools:itemCount="4"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:itemCount="4"
+        tools:listitem="@layout/item_location" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/all_locations_add_fab"
@@ -58,9 +58,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:theme="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-        app:srcCompat="@drawable/ic_add"
-        tools:ignore="ContentDescription"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/ic_add"
+        tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
