change fab style

--- a/app/src/main/res/layout/fragment_all_locations.xml
+++ b/app/src/main/res/layout/fragment_all_locations.xml
@@ -54,10 +54,7 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/all_locations_add_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:theme="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+        style="@style/fab_style"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
