--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -7,12 +7,8 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/map_add_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:theme="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         app:srcCompat="@drawable/ic_add"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        style="@style/fab_style" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
