--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,12 @@
     android:orientation="vertical"
     tools:context=".ui.MainActivity">
 
-    <!--<androidx.appcompat.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize" />-->
+        android:layout_height="?actionBarSize"
+        app:titleTextColor="@color/black" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_main_fragment"
