--- a/app/src/main/res/layout/fragment_location_name.xml
+++ b/app/src/main/res/layout/fragment_location_name.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/locationName_name_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Название локации"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:textColorHint="@color/gray"/>
+        android:backgroundTint="@color/black"
+        android:hint="Название локации"
+        android:textColor="@color/black"
+        android:textColorHint="@color/gray" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/locationName_ok_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="40dp"
         android:background="@color/black"
         android:text="OK"
         android:textColor="@color/white" />
