--- a/app/src/main/res/layout/fragment_locations_pager.xml
+++ b/app/src/main/res/layout/fragment_locations_pager.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/locations_tabLayout"
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         app:tabGravity="fill"
-        android:background="?selectableItemBackground"
+        android:background="@color/white"
         app:tabTextColor="@color/gray"
         app:tabIndicatorColor="@color/black"
         app:tabMode="fixed"
