--- a/app/src/main/res/layout/fragment_location_name.xml
+++ b/app/src/main/res/layout/fragment_location_name.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:backgroundTint="@color/black"
-        android:hint="Название локации"
+        android:hint="@string/location_name"
         android:textColor="@color/black"
         android:textColorHint="@color/gray" />
 
@@ -24,7 +24,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="40dp"
         android:background="@color/black"
-        android:text="OK"
+        android:text="@string/ok"
         android:textColor="@color/white" />
 
 </LinearLayout>
