--- a/app/src/main/res/layout/fragment_locations.xml
+++ b/app/src/main/res/layout/fragment_locations.xml
@@ -40,7 +40,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp"
                 android:gravity="center"
-                android:text="Вы ещё не выбрали ни одного города.\nПожалуйста, добавьте город, нажав на кнопку внизу."
+                android:text="@string/no_locations_text"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -52,7 +52,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="40dp"
                 android:background="@color/black"
-                android:text="Добавить локацию"
+                android:text="@string/add_location"
                 android:textColor="@color/white" />
 
         </LinearLayout>
