--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,6 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/black</item>
         <item name="colorAccent">@color/black</item>
+        <item name="android:textColorSecondary">@color/black</item>
         <!--<item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         &lt;!&ndash; Status bar color. &ndash;&gt;
