--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -29,10 +29,23 @@
         android:layout_marginBottom="10dp"
         android:textColor="@color/gray"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/itemLocation_city"
         tools:text="Текущая температура 30 с" />
+
+    <TextView
+        android:id="@+id/itemLocation_futureTemperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/gray"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/itemLocation_temperature"
+        tools:text="Температура завтра 30 с"/>
 
     <ImageView
         android:id="@+id/itemLocation_fav_btn"
