--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation.xml"
     app:startDestination="@id/destination_locations">
     <fragment
@@ -9,8 +8,11 @@
         android:name="ru.yellowshark.dsr_weather.ui.locations.forecast.ForecastFragment"
         android:label="@string/forecast">
         <argument
-            android:name="locationName"
-            app:argType="string" />
+            android:name="lat"
+            app:argType="float" />
+        <argument
+            android:name="lon"
+            app:argType="float" />
     </fragment>
     <fragment
         android:id="@+id/destination_locations"
