add function delete location

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -13,6 +13,9 @@
         <argument
             android:name="lon"
             app:argType="float" />
+        <argument
+            android:name="locationId"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/destination_locations"
