--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#BCBEC0</color>
+    <color name="transparent">@null</color>
+    <color name="black99">#99000000</color>
 </resources>
