--- a/app/src/main/res/layout/fragment_trigger_details.xml
+++ b/app/src/main/res/layout/fragment_trigger_details.xml
@@ -9,15 +9,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:gravity="center"
-            android:text="@string/trigger_details_title"
-            android:textColor="@color/black"
-            android:textSize="24sp" />
-
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/triggerDetails_name_til"
             style="@style/trigger_til_style"
@@ -79,7 +70,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/locationName_ok_btn"
+            android:id="@+id/triggerDetails_save_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
