--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,8 +26,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">15dp</item>
-        <item name="android:background">@color/white</item>
-        <item name="android:backgroundTint">@color/white</item>
+        <item name="boxStrokeColor">@color/black</item>
+        <item name="android:radius">8dp</item>
         <item name="android:padding">8dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/gray</item>
@@ -36,7 +36,6 @@
     <style name="trigger_et_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/white</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
