code refactor and clean project

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,9 +38,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:backgroundTint="@color/black99"
-        android:paddingTop="100dp"
+        android:paddingTop="@dimen/padding_100dp"
         app:itemBackground="@color/transparent"
-        app:itemIconSize="40dp"
+        app:itemIconSize="@dimen/size_40dp"
         app:itemIconTint="@color/white"
         app:itemTextAppearance="@style/AppNavTextAppearance"
         app:itemTextColor="@color/white"
