--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -18,11 +18,11 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/margin_8dp"
         android:background="@color/white"
         android:backgroundTint="@color/white"
         android:hint="@string/search"
-        android:padding="8dp"
+        android:padding="@dimen/padding_8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
         app:layout_constraintLeft_toLeftOf="parent"
