--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -29,13 +29,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/details_finish_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:background="@color/black"
-        android:text="@string/add"
-        android:textColor="@color/white" />
+        style="@style/base_button_style"
+        android:text="@string/add" />
 
 </LinearLayout>
