--- a/app/src/main/res/layout/fragment_location_name.xml
+++ b/app/src/main/res/layout/fragment_location_name.xml
@@ -9,8 +9,8 @@
         android:id="@+id/locationName_name_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="@dimen/margin_15dp"
+        android:layout_marginEnd="@dimen/margin_15dp"
         android:backgroundTint="@color/black"
         android:hint="@string/location_name"
         android:inputType="text"
@@ -19,13 +19,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/locationName_ok_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:background="@color/black"
-        android:text="@string/ok"
-        android:textColor="@color/white" />
+        style="@style/base_button_style"
+        android:text="@string/ok" />
 
 </LinearLayout>
