--- a/app/src/main/res/layout/fragment_locations_pager.xml
+++ b/app/src/main/res/layout/fragment_locations_pager.xml
@@ -3,21 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/locations_tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:tabGravity="fill"
+        android:layout_margin="@dimen/margin_8dp"
         android:background="@color/white"
-        app:tabTextColor="@color/gray"
+        app:tabGravity="fill"
         app:tabIndicatorColor="@color/black"
         app:tabMode="fixed"
         app:tabSelectedTextColor="@color/black"
-        app:tabTextAppearance="@style/AppTabTextAppearance"/>
+        app:tabTextAppearance="@style/AppTabTextAppearance"
+        app:tabTextColor="@color/gray" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/locations_viewPager"
