--- a/app/src/main/res/layout/item_forecast.xml
+++ b/app/src/main/res/layout/item_forecast.xml
@@ -2,15 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="64dp"
+    android:layout_width="@dimen/width_64dp"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp">
+    android:layout_margin="@dimen/margin_20dp">
 
     <TextView
         android:id="@+id/itemForecast_time_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="@dimen/margin_5dp"
         android:textColor="@color/gray"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -19,9 +19,9 @@
 
     <ImageView
         android:id="@+id/itemForecast_icon_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
+        android:layout_width="@dimen/size_50dp"
+        android:layout_height="@dimen/size_50dp"
+        android:layout_margin="@dimen/margin_5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/itemForecast_time_text"
@@ -39,8 +39,8 @@
 
     <ImageView
         android:id="@+id/itemForecast_humidityIcon_image"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="@dimen/size_10dp"
+        android:layout_height="@dimen/size_10dp"
         android:src="@drawable/ic_humidity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/gray"
-        android:textSize="10sp"
+        android:textSize="@dimen/text_size_10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/itemForecast_humidityIcon_image"
         app:layout_constraintTop_toBottomOf="@id/itemForecast_temp_text"
