--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="@dimen/margin_10dp"
     android:background="@color/white"
     android:clickable="true"
     android:focusable="true"
@@ -14,9 +14,9 @@
         android:id="@+id/itemLocation_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/margin_10dp"
         android:textColor="@color/black"
-        android:textSize="22sp"
+        android:textSize="@dimen/text_size_22sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Воронеж" />
@@ -25,10 +25,10 @@
         android:id="@+id/itemLocation_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="@dimen/margin_10dp"
+        android:layout_marginBottom="@dimen/margin_10dp"
         android:textColor="@color/gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_16sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/itemLocation_city"
         tools:text="Текущая температура 30 с" />
@@ -37,21 +37,21 @@
         android:id="@+id/itemLocation_futureTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="@dimen/margin_10dp"
+        android:layout_marginBottom="@dimen/margin_10dp"
         android:textColor="@color/gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_16sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/itemLocation_temperature"
-        tools:text="Температура завтра 30 с"/>
+        tools:text="Температура завтра 30 с" />
 
     <ImageView
         android:id="@+id/itemLocation_fav_btn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="15dp"
+        android:layout_width="@dimen/margin_40dp"
+        android:layout_height="@dimen/margin_40dp"
+        android:layout_margin="@dimen/margin_15dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?selectableItemBackground"
