--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,13 +2,13 @@
 <resources>
 
     <style name="AppTabTextAppearance" parent="TextAppearance.Design.Tab">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/text_size_18sp</item>
         <item name="android:textColor">@color/gray</item>
         <item name="textAllCaps">false</item>
     </style>
 
     <style name="AppNavTextAppearance" parent="TextAppearance.AppCompat">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/text_size_18sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
@@ -16,7 +16,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">bottom|end</item>
-        <item name="android:layout_margin">16dp</item>
+        <item name="android:layout_margin">@dimen/margin_15dp</item>
         <item name="android:theme">@style/Widget.MaterialComponents.ExtendedFloatingActionButton</item>
         <item name="android:backgroundTint">@color/black</item>
         <item name="tint">@color/white</item>
@@ -25,10 +25,10 @@
     <style name="trigger_til_style" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">15dp</item>
+        <item name="android:layout_margin">@dimen/margin_15dp</item>
         <item name="boxStrokeColor">@color/black</item>
-        <item name="android:radius">8dp</item>
-        <item name="android:padding">8dp</item>
+        <item name="android:radius">@dimen/margin_8dp</item>
+        <item name="android:padding">@dimen/padding_8dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/gray</item>
     </style>
@@ -37,6 +37,17 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="base_button_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_15dp</item>
+        <item name="android:layout_marginTop">@dimen/margin_30dp</item>
+        <item name="android:layout_marginEnd">@dimen/margin_15dp</item>
+        <item name="android:layout_marginBottom">@dimen/margin_30dp</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
